Updated the balance model.
