# ModelSynchroLibrary/Sources/ModelSynchroLibrary/Utility/OpenApiParser.swift
@@ -1,0 +1,200 @@
+//
+//  OpenApiParser.swift
+//  ModelSynchroLibrary
+//
+//  Created by Jonathan Samudio on 2/9/19.
+//
+
+import Foundation
+
+final class OpenApiParser {
+    
+    private var openApi: Openapi
+    
+    init(openApi: Openapi) {
+        self.openApi = openApi
+    }
+    
+    func convertToServerApi(config: ConfigurationFile) -> ServerAPIInfo {
+        let baseUrl = openApi.servers.first?.url
+        var apisDict = [String: [Endpoint]]()
+        
+        // TODO: API Naming conventions, currently account not AccountApi
+        // InlineResponse200 for Unit related responses.
+        
+        if let pathsJson = openApi.paths {
+            for (endpointUrl, endpointJson) in pathsJson {
+                guard let endpointJson = endpointJson as? JSON else {
+                    continue
+                }
+                
+                // Path Endpoints
+                for (endpointInfoKey, endpointInfoValue) in endpointJson {
+                    guard  let endpointInfoValue = endpointInfoValue as? JSON else {
+                        continue
+                    }
+                    
+                    // Endpoints
+                    if let httpMethod = HTTPMethod.init(rawValue: endpointInfoKey) {
+                        let apiTags = endpointInfoValue["tags"] as? [String]
+                        let apiFunctionName = endpointInfoValue["operationId"] as? String
+                        
+                        // Components
+                        
+                        // TODO: Move to another function.
+                        var exampleModelInfo = [String: JSON]()
+                        if let schemaJson = openApi.components.schemas {
+                            for (modelName, modelValue) in schemaJson {
+                                if let modelValue = modelValue as? JSON,
+                                    let propertyJSON = modelValue["properties"] as? JSON {
+                                    
+                                    for (propertyName, propertyValue) in propertyJSON {
+                                        if let propertyValue = propertyValue as? JSON,
+                                            let exampleValue = extractExampleValue(from: propertyValue) {
+                                            
+                                            if exampleModelInfo[modelName] == nil {
+                                                exampleModelInfo[modelName] = JSON()
+                                            }
+                                            
+                                            if var modelExampleJson = exampleModelInfo[modelName] {
+                                                modelExampleJson[propertyName] = exampleValue
+                                                exampleModelInfo[modelName] = modelExampleJson
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        
+                        // TODO: Path, Query, Body Parsing.
+                        
+                        // TODO: Move to another function.
+                        let parameters = endpointInfoValue["parameters"] as? [JSON]
+                        let requestBodyJson = endpointInfoValue["requestBody"] as? JSON
+                        let responsesJson = endpointInfoValue["responses"] as? JSON
+                        let successResponse = responsesJson?["200"] as? JSON
+                        
+                        var pathInfo: RequestInfo? = nil
+                        var queryInfo: RequestInfo? = nil
+                        var bodyInfo: RequestInfo? = nil
+                        
+                        if let requestModelName = extractSchema(from: requestBodyJson) {
+                            // Body Info
+                            bodyInfo = RequestInfo(modelName: requestModelName,
+                                                   data: exampleModelInfo[requestModelName])
+                        }
+                        
+                        if let parameters = parameters {
+                            // Query Info & PathInfo
+                            for parameter in parameters {
+                                if let name = parameter["name"] as? String {
+                                    if let location = parameter["in"] as? String, location == "path" {
+                                        if pathInfo == nil {
+                                            pathInfo = RequestInfo(modelName: nil, data: JSON())
+                                        }
+                                        
+                                        if let schemaJson = parameter["schema"] as? JSON {
+                                            pathInfo?.data?[name] = extractExampleValue(from: schemaJson)
+                                        }
+                                    }
+                                    if let location = parameter["in"] as? String, location == "query" {
+                                        if queryInfo == nil {
+                                            queryInfo = RequestInfo(modelName: nil, data: JSON())
+                                        }
+                                        
+                                        if let schemaJson = parameter["schema"] as? JSON {
+                                            queryInfo?.data?[name] = extractExampleValue(from: schemaJson)
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        
+                        // Convert Schema to responseModelName
+                        guard let schemaName = extractSchema(from: successResponse),
+                            let apiName = apiTags?.first else {
+                                continue
+                        }
+                        
+                        let responseModelName = exampleModelInfo[schemaName] == nil ? nil : schemaName
+                        let endpoint = Endpoint(functionName: apiFunctionName,
+                                                responseModelName: responseModelName,
+                                                url: nil,
+                                                endpoint: endpointUrl,
+                                                authorized: false,
+                                                method: httpMethod,
+                                                pathInfo: pathInfo,
+                                                queryInfo: queryInfo,
+                                                bodyInfo: bodyInfo)
+                        
+                        if apisDict[apiName] == nil {
+                            apisDict[apiName] = [Endpoint]()
+                        }
+                        apisDict[apiName]?.append(endpoint)
+                    }
+                }
+            }
+        }
+        
+        let apis = apisDict.map { Api(name: formattedApiName($0.key), endpoints: $0.value) }
+        return ServerAPIInfo(apis: apis, headers: nil, authEndpoint: nil, baseUrl: baseUrl)
+    }
+}
+
+private extension OpenApiParser {
+    
+    var defaultServerAPIInfo: ServerAPIInfo {
+        return ServerAPIInfo(apis: nil, headers: nil, authEndpoint: nil, baseUrl: nil)
+    }
+    
+    func formattedApiName(_ name: String) -> String {
+        return "\(name.capitalized)Api"
+    }
+    
+    func extractSchema(from contentJson: JSON?) -> String? {
+        let content = contentJson?["content"] as? JSON
+        let applicationJson = content?["application/json"] as? JSON
+        let schema = applicationJson?["schema"] as? JSON
+        let pathSchema = schema?["$ref"] as? String
+        
+        if let schema = pathSchema?.split(separator: "/").last {
+            return String(schema)
+        }
+        return nil
+    }
+    
+    func extractExampleValue(from propertyJson: JSON?) -> Any? {
+        if let exampleValue = propertyJson?["example"] {
+            return exampleValue
+        } else if let typeValue = propertyJson?["type"] as? String, let type = OpenApiType.init(rawValue: typeValue) {
+            return type.defaultExampleValue
+        }
+        return nil
+    }
+}
+
+enum OpenApiType: String {
+    case integer
+    case number
+    case string
+    case boolean
+    case double
+    case array
+    
+    var defaultExampleValue: Any {
+        switch self {
+        case .integer:
+            return 3
+        case .number:
+            return 3
+        case .string:
+            return "12345"
+        case .boolean:
+            return true
+        case .double:
+            return 3.3
+        case .array:
+            return []
+        }
+    }
+}
